--- a/force-app/main/default/aura/Alerts/Alerts.cmp
+++ b/force-app/main/default/aura/Alerts/Alerts.cmp
@@ -37,5 +37,6 @@
     </c:Popup>
 
     <c:OnboardingSlideTour aura:id="onboardingSlideTour" userMode="{!v.userMode}"/>
+    <c:MotivationalMessages aura:id="motivationalMessages" userMode="{!v.userMode}"/>
 
 </aura:component>
