Updated Task Edit, Task table, Added custom labels

--- a/unpackaged/main/default/layouts/Event-Event Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Event-Event Layout.layout-meta.xml
@@ -105,6 +105,10 @@
                 <behavior>Edit</behavior>
                 <field>Description</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Visible_For__c</field>
+            </layoutItems>
         </layoutColumns>
         <style>OneColumn</style>
     </layoutSections>
@@ -112,6 +116,8 @@
         <customLabel>false</customLabel>
         <detailHeading>false</detailHeading>
         <editHeading>false</editHeading>
+        <layoutColumns/>
+        <layoutColumns/>
         <layoutColumns/>
         <style>CustomLinks</style>
     </layoutSections>
