--- a/unpackaged/main/default/layouts/Task-Task Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Task-Task Layout.layout-meta.xml
@@ -57,6 +57,10 @@
                 <behavior>Edit</behavior>
                 <field>Description</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Visible_For__c</field>
+            </layoutItems>
         </layoutColumns>
         <style>OneColumn</style>
     </layoutSections>
