--- a/force-app/main/default/aura/ResourcesDetailItem/ResourcesDetailItem.cmp
+++ b/force-app/main/default/aura/ResourcesDetailItem/ResourcesDetailItem.cmp
@@ -4,23 +4,21 @@
 
 <aura:component description="ResourcesDetailItem" controller="ResourceRemote">
 
-    <aura:attribute name="resource" type="ResourceService.ResourceWrapper"/>
+    <aura:attribute name="resourceWrapper" type="ResourceService.ResourceWrapper"/>
 
     <aura:handler name="init" value="this" action="{!c.doInit}"/>
     <aura:handler name="render" value="{!this}" action="{!c.doRender}"/>
-    <!--<aura:handler name="change" value="{!v.resourceType}" action="{!c.doInit}"/>-->
-
 
     <div class="resource-container">
-        <aura:if isTrue="{!v.resource.type == 'Article'}">
-            <div class="{!or(v.resource.image == null, v.resource.image == '') ? 'hide-image' : 'bitmap'}">
-                <img src="{!v.resource.image}" alt="{!$Label.c.Resources_Image_Unavailable}"/>
+        <aura:if isTrue="{!v.resourceWrapper.resource.RecordType.DeveloperName == 'Article'}">
+            <div class="{!or(v.resourceWrapper.resource.Image__c == null, v.resourceWrapper.resource.Image__c == '') ? 'hide-image' : 'bitmap'}">
+                <img src="{!v.resourceWrapper.resource.Image__c}" alt="{!$Label.c.Resources_Image_Unavailable}"/>
             </div>
             <aura:set attribute="else">
                 <div class="ah-video-iframe">
                     <iframe class="my_iframe"
                             frameborder="0"
-                            src="{!v.resource.video}">
+                            src="{!v.resourceWrapper.resource.Video__c}">
                     </iframe>
                 </div>
             </aura:set>
@@ -28,19 +26,19 @@
 
         <div class="resource-description">
             <div class="resource-title">
-				{!v.resource.title}
+				{!v.resourceWrapper.resource.Title__c}
 			</div>
             <div class="resource-description-short">
                 <!--SHORT DESCRIPTION!!!-->
-                {!v.resource.description}
+                {!v.resourceWrapper.resource.Description__c}
             </div>
             <div class="resource-expiration-date">
                 Expires:
-                <ui:outputDate value="{!v.resource.expirationDate}" format="dd-MMM-y"/>
+                <ui:outputDate value="{!v.resourceWrapper.resource.Expiration_Date__c}" format="dd-MMM-y"/>
             </div>
             <div class="resource-description-footer">
                 <div class="resources-icon icon-like" onclick="{!c.doLike}">
-                    <aura:if isTrue="{!v.resource.isVoted}">
+                    <aura:if isTrue="{!v.resourceWrapper.isVoted}">
                         <c:RRIcon iconName="icon-like-brand-new" color="blue" class="resources-icon-like"/>
                         <aura:set attribute="else">
                             <c:RRIcon iconName="icon-like-brand-new" class="resources-icon-like"/>
@@ -49,7 +47,7 @@
                 </div>
 
                 <div class="resources-icon" onclick="{!c.doFavorite}">
-                    <aura:if isTrue="{!v.resource.isFavorite}">
+                    <aura:if isTrue="{!v.resourceWrapper.isFavorite}">
                         <c:RRIcon iconName="icon-star-brand-new" color="blue" class="resources-icon-star"/>
                         <aura:set attribute="else">
                             <c:RRIcon iconName="icon-star" class="resources-icon-star"/>
@@ -57,7 +55,7 @@
                     </aura:if>
                 </div>
             </div>
-            <aura:if isTrue="{!v.resource.isUpdated}">
+            <aura:if isTrue="{!v.resourceWrapper.resource.Updated_Date__c != null}">
                 <div class="resource-content-updated">
                     {!$Label.c.Resources_Content_Has_Been_Updated}
                 </div>
@@ -66,8 +64,7 @@
 
                 <!--DESCRIPTION - FULL - MAYBE FIELD body -->
 
-                <lightning:formattedRichText value="{!v.resource.body}"/>
-                <!--{!v.resource.body}-->
+                <lightning:formattedRichText value="{!v.resourceWrapper.resource.Body__c}"/>
             </div>
         </div>
     </div>
