--- a/force-app/main/default/aura/ResourceItem/ResourceItem.cmp
+++ b/force-app/main/default/aura/ResourceItem/ResourceItem.cmp
@@ -1,29 +1,29 @@
 <aura:component controller="ResourceRemote" description="ResourceItem">
 
     <!--ATTRIBUTES-->
-    <aura:attribute name="resource" type="ResourceService.ResourceWrapper"/>
+    <aura:attribute name="resourceWrapper" type="ResourceService.ResourceWrapper"/>
     <aura:attribute name="class" type="String" default="" description="css class"/>
 
     <!--COMPONENT BODY-->
     <div class="{!'resource-container ' + (v.class.length > 0 ? v.class : '')}">
 
         <div class="resource-image-container resource-pointer" onclick="{!c.navigateToPage}">
-            <img alt="{!$Label.c.Resources_Image_Unavailable}" src="{!v.resource.image}"/>
+            <img alt="{!$Label.c.Resources_Image_Unavailable}" src="{!v.resourceWrapper.resource.Image__c}"/>
         </div>
 
         <div class="resource-description">
             <div class="resource-description-title resource-pointer" onclick="{!c.navigateToPage}">
-                {!v.resource.title}
+                {!v.resourceWrapper.resource.Title__c}
             </div>
             <div class="resource-description-text resource-pointer" onclick="{!c.navigateToPage}">
-                {!v.resource.description}
+                {!v.resourceWrapper.resource.Description__c}
             </div>
             <div class="resource-expiration-date">
-                Expires: <ui:outputDate value="{!v.resource.expirationDate}"/>
+                Expires: <ui:outputDate value="{!v.resourceWrapper.resource.Expiration_Date__c}"/>
             </div>
             <div class="resource-description-footer">
                 <div class="resource-icon resource-pointer" onclick="{!c.doVote}">
-                    <aura:if isTrue="{!v.resource.isVoted}">
+                    <aura:if isTrue="{!v.resourceWrapper.isVoted}">
                         <c:RRIcon iconName="icon-like-brand-new" color="blue" class="resource-icon-like"/>
                         <aura:set attribute="else">
                             <c:RRIcon iconName="icon-like-brand-new" class="resource-icon-like"/>
@@ -32,7 +32,7 @@
                 </div>
 
                 <div class="resource-icon resource-pointer" onclick="{!c.doFavorite}">
-                    <aura:if isTrue="{!v.resource.isFavorite}">
+                    <aura:if isTrue="{!v.resourceWrapper.isFavorite}">
                         <c:RRIcon iconName="icon-star-brand-new" color="blue" class="resource-icon-star"/>
                         <aura:set attribute="else">
                             <c:RRIcon iconName="icon-star" class="resource-icon-star"/>
