--- a/force-app/main/default/aura/ResourcesDetailContainer/ResourcesDetailContainer.cmp
+++ b/force-app/main/default/aura/ResourcesDetailContainer/ResourcesDetailContainer.cmp
@@ -7,7 +7,7 @@
     <ltng:require styles="{!join(',', $Resource.rr_community_css, $Resource.proximanova + '/proximanova.css')}"
                   scripts="{!join(',', $Resource.rr_community_js)}"/>
 
-    <aura:attribute name="resource" type="ResourceService.ResourceWrapper"/>
+    <aura:attribute name="resourceWrapper" type="ResourceService.ResourceWrapper"/>
     <aura:attribute name="resourceType" type="String" default="Article"/>
     <!--<aura:attribute name="resourceType" type="String" default="Video"/>-->
     <aura:attribute name="studyName" type="String" default="contRAst-1 Rheumatoid Arthritis Study"/>
@@ -22,7 +22,7 @@
                     smallTitle="{!v.smallTitle}"
                     bigTitle="{!v.resourceType}"/>
         <div class="resource-detail-block">
-            <c:ResourcesDetailItem resource="{!v.resource}"/>
+            <c:ResourcesDetailItem resourceWrapper ="{!v.resourceWrapper}"/>
         </div>
         <div class="rr-width-limiter side-padding">
             <c:CommunityFooter/>
