--- a/force-app/main/default/aura/ShareModal/ShareModal.cmp
+++ b/force-app/main/default/aura/ShareModal/ShareModal.cmp
@@ -3,13 +3,13 @@
 <aura:component controller="ShareModalController" description="ShareModal">
 
     <!-- attributes: -->
-    <aura:attribute name="hcpe" type="Object"/>
+    <aura:attribute name="trial" type="Object"/>
     <aura:attribute name="parent" type="Aura.Component" required="true"/>
     <aura:attribute name="targetEmail" type="String"/>
 
     <!-- methods: -->
     <aura:method name="show" action="{!c.doShow}">
-        <aura:attribute name="hcpe" type="Object" access="public"/>
+        <aura:attribute name="trial" type="Object" access="public"/>
     </aura:method>
     <aura:method name="hide" action="{!c.doHide}"/>
 
