--- a/force-app/main/default/aura/TasksTab/TasksTab.cmp
+++ b/force-app/main/default/aura/TasksTab/TasksTab.cmp
@@ -30,6 +30,7 @@
                             <th class="priority">{!$Label.c.Originator}</th>
                             <th class="completed-by">{!$Label.c.Due_date}</th>
                             <th class="completed-by">{!$Label.c.Reminder_Date}</th>
+                            <th></th>
                         </tr>
                         <aura:iteration items="{!v.openTasks}" var="taskWrapper">
                             <tr>
@@ -48,6 +49,11 @@
                                     </aura:if>
                                     <aura:if isTrue="{!taskWrapper.openTask.Completed_Date__c == null}">
                                         {!$Label.c.None}
+                                    </aura:if>
+                                </td>
+                                <td class="ignore">
+                                    <aura:if isTrue="{!taskWrapper.originator != $Label.c.Admin}">
+                                        <button id="{!taskWrapper.openTask.Id}" class="apollo-btn tertiary" onclick="{!c.doIgnoreTask}">{!$Label.c.BTN_Ignore}</button>
                                     </aura:if>
                                 </td>
                             </tr>
