--- a/unpackaged/main/default/layouts/Event-Event Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Event-Event Layout.layout-meta.xml
@@ -37,6 +37,10 @@
                 <behavior>Edit</behavior>
                 <field>Task_Type__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Action_URL__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -112,6 +116,8 @@
         <customLabel>false</customLabel>
         <detailHeading>false</detailHeading>
         <editHeading>false</editHeading>
+        <layoutColumns/>
+        <layoutColumns/>
         <layoutColumns/>
         <style>CustomLinks</style>
     </layoutSections>
