--- a/unpackaged/main/default/layouts/Task-Task Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Task-Task Layout.layout-meta.xml
@@ -26,6 +26,10 @@
                 <behavior>Edit</behavior>
                 <field>Reminder_Date__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Action_URL__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
