--- a/force-app/main/default/aura/BaselineSurvey/BaselineSurvey.cmp
+++ b/force-app/main/default/aura/BaselineSurvey/BaselineSurvey.cmp
@@ -2,20 +2,34 @@
  - Created by Leonid Bartenev
  -->
 
-<aura:component description="BaselineSurvey" implements="forceCommunity:availableForAllPageTypes">
+<aura:component description="BaselineSurvey" controller="BaselineSurveyRemote" implements="forceCommunity:availableForAllPageTypes">
 
-    <!-- aura attributes: -->
+    <!-- attributes: -->
     <aura:attribute name="initialized" type="Boolean" default="false"/>
+    <aura:attribute name="ctp" type="Clinical_Trial_Profile__c"/>
+
+    <!-- handlers: -->
+    <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
+    <aura:handler event="c:EventCommunityInitialized" action="{!c.doInit}"/>
 
     <!-- component body: -->
+    <c:RRSpinner aura:id="spinner" size="medium" fixed="true"/>
     <c:RRTopBar backLabel="{!$Label.c.PG_MRR_L_Back_to_Study_Workspace}"
                 backPage="study-workspace"
-                smallTitle="TODO Study Name Here"
+                smallTitle="{!v.ctp.Study_Code_Name__c}"
                 bigTitle="{!$Label.c.PG_BLS_Header}">
-
-        <aura:if isTrue="{!v.initialized}">
-        </aura:if>
-
     </c:RRTopBar>
+
+    <div class="bls-body rr-all-content">
+        <aura:if isTrue="{!!empty(v.ctp.Baseline_Survey_URL__c)}">
+
+            <iframe id="blsIFrame" class="bls-iframe" src="{!v.ctp.Baseline_Survey_URL__c}" onload="{!c.doFrameLoaded}"></iframe>
+        </aura:if>
+    </div>
+
+    <div class="rr-width-limiter side-padding">
+        <c:CommunityFooter/>
+    </div>
+
 
 </aura:component>
