--- a/force-app/main/default/components/EmailTemplate.component
+++ b/force-app/main/default/components/EmailTemplate.component
@@ -9,6 +9,7 @@
     <apex:attribute name="recipientName" type="String" assignTo="{!emailRecipientName}" access="global" description=""/>
     <apex:attribute name="recipientId" type="Id" assignTo="{!emailRecipientId}" access="global" description=""/>
     <apex:attribute name="recipientLanguage" type="String" assignTo="{!emailRecipientLanguage}" access="global" description=""/>
+    <apex:attribute name="parametersProvider" type="String" assignTo="{!emailParametersProvider}" access="global" description=""/>
     <apex:attribute name="sourceId" assignTo="{!sourceRecordId}" type="Id" description="target of data extraction" access="global" required="true"/>
     <apex:attribute name="addBreaks" assignTo="{!replaceLineBreaksOnHTMLBreaks}" type="Boolean" default="true" description="" access="global"/>
 
