--- a/force-app/main/default/aura/StudyDetailView/StudyDetailView.css
+++ b/force-app/main/default/aura/StudyDetailView/StudyDetailView.css
@@ -207,10 +207,39 @@
 .THIS .invisible-tab{
     display: none;
 }
+.THIS .resources-icon-social {
+    margin-left: 0.5rem;
+}
+.THIS .share-social-buttons {
+    display: inline-flex;
+    justify-content: end;
+    align-items: flex-end;
+    min-width: 6rem;
+    float: right;
+    margin-right: 65px;
+}
+.THIS .share-social-icon {
+    margin-right: 0.5rem;
+    display: inline-block;
+    width: 22px;
+    height: 22px;
+}
+
+.THIS .contrast-logo {
+    max-width: 136px;
+    margin: 10px 0;
+}
+
+.THIS .hidden-button{
+    visibility: hidden;
+}
 
 @media (max-width: 768px){
     .THIS .sdv-top-bar .links .apollo-btn.text{
         font-size: 13px;
+    }
+    .THIS  .share-social-buttons {
+        margin-right: 0;
     }
 }
 
@@ -224,39 +253,4 @@
     .THIS .sdv-top-bar.sticky.multi-mode .sticky-bar{
         top: 80px;
     }
-}
-.THIS .contrast-logo {
-    max-width: 136px;
-    margin: 10px 0;
-}
-.THIS .button-share-icon {
-    visibility: hidden;
-    display:inline-flex;
-    position:absolute;
-    margin-left: -35px;
-    margin-top: 70px;
-    transition: all ease 0.3s;
-
-}
-.THIS #shares:hover ~ .button-share-icon{
-    /*display: block !important;*/
-    visibility: visible;
-}
-.THIS .button-share-icon:hover {
-    /*display: block !important;*/
-    visibility: visible;
-}
-.THIS .share-button {
-    margin-left: 10px;
-    height: 24px;
-    width: 24px;
-}
-.THIS .hidden-button{
-    visibility: hidden;
-}
-.THIS .share-button:hover {
-    -webkit-transform: scale(1.3);
-    -moz-transform: scale(1.3);
-    -o-transform: scale(1.3);
-    transform: scale(1.3);
 }
